Tutorial-SommerfeldBoundaryCondition: tidy up some of the language.

--- a/Tutorial-SommerfeldBoundaryCondition.ipynb
+++ b/Tutorial-SommerfeldBoundaryCondition.ipynb
@@ -52,7 +52,10 @@
     "    1. [Step 2.c](#sbc_ansatz): Sommerfeld boundary condition ansatz\n",
     "    1. [Step 2.d](#sbc_ansatz_dtf): Applying the ansatz to $\\partial_t f$\n",
     "    1. [Step 2.e](#curvicoords): Implementation in generic curvilinear coordinates\n",
+    "        1. [Step 2.e.i](#cartcoords_byhand): Sommerfeld boundary conditions implementation in Cartesian coordinates, derived by hand\n",
+    "        1. [Step 2.e.ii](#cartcoords_bynrpysympy): Sommerfeld boundary conditions implementation in Cartesian coordinates, derived by NRPy+/SymPy\n",
     "1. [Step 3](#numalg): Numerical algorithm overview\n",
+    "    1. [Step 3.a](#k): Solving for the subdominant radial falloff proportionality constant $k$\n",
     "1. [Step 4](#interface): NRPy+ Interface for Applying Sommerfeld Boundary Conditions\n",
     "1. [Step 5](#etk_validation): Validation against the [Einstein Toolkit's NewRad boundary condition driver](https://www.einsteintoolkit.org/thornguide/EinsteinEvolve/NewRad/documentation.html#XEinsteinEvolve_NewRad_Alcubierre:2002kk)\n",
     "1. [Latex Output](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
@@ -158,7 +161,7 @@
     "&= \\left(-\\frac{1}{v^2}\\partial_t^2 + \\partial_r^2\\right)u - \\hat{g}^{\\mu\\nu} \\left[\\hat{\\Gamma}^t_{\\mu\\nu} \\partial_{t} + \\hat{\\Gamma}^r_{\\mu\\nu} \\partial_{r}\\right]u.\n",
     "\\end{align}\n",
     "\n",
-    "We will now refer the reader to the [scalar wave in curvilinear coordinates notebook](Tutorial-ScalarWaveCurvilinear.ipynb) for the remainder of the derivation. The bottom line is, after removing terms implying angular variation, one obtains the wave equation for spherically symmetric waves:\n",
+    "We will now refer the reader to the [scalar wave in curvilinear coordinates notebook](Tutorial-ScalarWaveCurvilinear.ipynb) for the remainder of the derivation. The bottom line is, after removing terms implying angular variation in $u$, one obtains the wave equation for spherically symmetric waves:\n",
     "\n",
     "$$\n",
     "\\frac{1}{v^2} \\partial_t^2 u = \\partial_r^2 u + \\frac{2}{r} \\partial_r u,\n",
@@ -283,6 +286,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='cartcoords_byhand'></a>\n",
+    "\n",
+    "### Step 2.e.i: Sommerfeld boundary conditions implementation in Cartesian coordinates, derived by hand \\[Back to [top](#toc)\\]\n",
+    "$$\\label{cartcoords_byhand}$$\n",
+    "\n",
     "Let's now work this out for Cartesian coordinates in NRPy+, first by hand, and then using `reference_metric.py`:\n",
     "\n",
     "In Cartesian coordinates $\\frac{\\partial f}{\\partial r}$ may be expanded as\n",
@@ -316,6 +324,11 @@
     "$$\n",
     "\\partial_t f = -\\frac{v}{r} \\left[ x^i \\partial_i f + \\left( f - f_0 \\right) \\right] + \\frac{k}{r^{n+1}}.\n",
     "$$\n",
+    "\n",
+    "<a id='cartcoords_bynrpysympy'></a>\n",
+    "\n",
+    "### Step 2.e.ii: Sommerfeld boundary conditions implementation in Cartesian coordinates, derived automatically by NRPy+/SymPy \\[Back to [top](#toc)\\]\n",
+    "$$\\label{cartcoords_bynrpysympy}$$\n",
     "\n",
     "Now let's use NRPy+'s `reference_metric.py` to obtain the same expression for $\\frac{\\partial f}{\\partial r}$, but using the generic coordinate system interface (`CoordSystem=Cartesian`; feel free to change it to another coordinate system of your choice!):"
    ]
@@ -371,7 +384,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We could obtain the same equation\n",
+    "<a id='numalg'></a>\n",
+    "\n",
+    "# Step 3: Numerical algorithm overview \\[Back to [top](#toc)\\]\n",
+    "$$\\label{numalg}$$\n",
     "\n",
     "To implement the above Sommerfeld boundary condition, we must specify for each dynamical variable:\n",
     "\n",
@@ -379,7 +395,22 @@
     "* its asymptotic value at infinity, and \n",
     "* its the $r^n$ power that must be applied for the non-wavelike behavior at the boundary. \n",
     "\n",
-    "In our own implementations we have found that $n=2$ exhibits the best results for minimal reflections. The [Einstein Toolkit's NewRad boundary condition driver](https://www.einsteintoolkit.org/thornguide/EinsteinEvolve/NewRad/documentation.html#XEinsteinEvolve_NewRad_Alcubierre:2002kk) documentation page also states similar results, writing \"empirically, we have found that taking $n = 2$ almost completely eliminates the bad transient caused by the radiative boundary condition on its own\". The following set of code cells implement the above equation, excluding the $\\frac{k}{r^{n+1}}$ term, for a Cartesian grid."
+    "In our own implementations we have found that $n=2$ exhibits the best results for minimal reflections. The [Einstein Toolkit's NewRad boundary condition driver](https://www.einsteintoolkit.org/thornguide/EinsteinEvolve/NewRad/documentation.html#XEinsteinEvolve_NewRad_Alcubierre:2002kk) documentation page also states similar results, writing \"empirically, we have found that taking $n = 2$ almost completely eliminates the bad transient caused by the radiative boundary condition on its own\". The following set of code cells implement the above equation, excluding the $\\frac{k}{r^{n+1}}$ term, for a Cartesian grid.\n",
+    "\n",
+    "Our procedure in implementing this boundary condition is as follows:\n",
+    "\n",
+    "0) Define data for $f$ at **all** points in our numerical domain\n",
+    "\n",
+    "1) Evaluate $\\frac{df}{dt}$ at points in the **interior** only, using the       prescribed equations to evaluate the RHS and ghost zones for the finite         differences at the outer boundaries\n",
+    "\n",
+    "2) For points in the ghost zones, apply the Sommerfeld condition to obtain      $\\frac{df}{dt}$ in the ghost zones, assuming advection and radial fall off behavior. When evaluating the spatial derivatives, use forward or backward finite differences for directions perpendicular to the outer boundary face being considered, and centered derivatives for the directions which lie in the plane of the outer boundary face. Furthermore, to minimize error we loop through inner boundary points and work outwards, so that the forward or backward stencils never include untreated points.\n",
+    "\n",
+    "3) Account for non-wavelike evolution of our numerical solution at the boundary\n",
+    "\n",
+    "4) Perform RK-update for all points (interior + ghost zones). Since the linear mapping to outside our numerical domain is linear, treatment of points in the interior and points on the boundary must be at the same time level\n",
+    "<br>\n",
+    "\n",
+    "Also note that to use the boundary condition the main C code must define 'using_sommerfeld' near the top, to avoid compilation errors, i.e. as `#define using_sommerfeld 1.0 `. The value doesn't matter; the variable just needs to be defined."
    ]
   },
   {
@@ -636,7 +667,7 @@
    "source": [
     "<a id='k'></a>\n",
     "\n",
-    "## Step 2.a: Solving for $k$ \\[Back to [top](#toc)\\]\n",
+    "## Step 3.a: Solving for $k$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{k}$$\n",
     "\n",
     "\n",
@@ -794,31 +825,6 @@
     "            }// END for(int pt=0;pt<num_ib_gz_pts[which_gz];pt++)\n",
     "        } // END for(int which_gz = 0; which_gz < NGHOSTS; which_gz++)\n",
     "    } // END for(int which_gf=0;which_gf<NUM_GFS;which_gf++)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='numalg'></a>\n",
-    "\n",
-    "# Step 3: Numerical algorithm overview \\[Back to [top](#toc)\\]\n",
-    "$$\\label{numalg}$$\n",
-    "\n",
-    "Our procedure in implementing this boundary condition is as follows:\n",
-    "\n",
-    "0) Define data for $f$ at **all** points in our numerical domain\n",
-    "\n",
-    "1) Evaluate $\\frac{df}{dt}$ at points in the **interior** only, using the       prescribed equations to evaluate the RHS and ghost zones for the finite         differences at the outer boundaries\n",
-    "\n",
-    "2) For points in the ghost zones, apply the Sommerfeld condition to obtain      $\\frac{df}{dt}$ in the ghost zones, assuming advection and radial fall off behavior. When evaluating the spatial derivatives, use forward or backward finite differences for directions perpendicular to the outer boundary face being considered, and centered derivatives for the directions which lie in the plane of the outer boundary face. Furthermore, to minimize error we loop through inner boundary points and work outwards, so that the forward or backward stencils never include untreated points.\n",
-    "\n",
-    "3) Account for non-wavelike evolution of our numerical solution at the boundary\n",
-    "\n",
-    "4) Perform RK-update for all points (interior + ghost zones). Since the linear mapping to outside our numerical domain is linear, treatment of points in the interior and points on the boundary must be at the same time level\n",
-    "<br>\n",
-    "\n",
-    "Also note that to use the boundary condition the main C code must define 'using_sommerfeld' near the top, to avoid compilation errors, i.e. as `#define using_sommerfeld 1.0 `. The value doesn't matter; the variable just needs to be defined."
    ]
   },
   {
