--- a/Tutorial-SommerfeldBoundaryCondition.ipynb
+++ b/Tutorial-SommerfeldBoundaryCondition.ipynb
@@ -346,14 +346,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fdD0*xx0/sqrt(xx0**2 + xx1**2 + xx2**2) + fdD1*xx1/sqrt(xx0**2 + xx1**2 + xx2**2) + fdD2*xx2/sqrt(xx0**2 + xx1**2 + xx2**2)\n"
+      "(fdD0*xx0 + fdD1*xx1 + fdD2*xx2)/sqrt(xx0**2 + xx1**2 + xx2**2)\n"
      ]
     }
    ],
@@ -396,7 +396,7 @@
     "contraction = sp.sympify(0)\n",
     "for i in range(3):\n",
     "    contraction += f_dD[i]*Jac_dUrfm_dDSphUD[i][0]\n",
-    "print(contraction)"
+    "print(sp.simplify(contraction))"
    ]
   },
   {
@@ -1126,7 +1126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
