Tutorial-SommerfeldBoundaryCondition: some small cleanups

--- a/Tutorial-SommerfeldBoundaryCondition.ipynb
+++ b/Tutorial-SommerfeldBoundaryCondition.ipynb
@@ -147,12 +147,12 @@
     "Our Sommerfeld boundary condition implementation assumes $f$ behaves as a spherically symmetric, outgoing wave at the boundaries. Under these assumptions, the waves satisfy the wave equation in spherical coordinates with angular parts set to zero. I.e., under these assumptions the wavefunction $u(r,t)$ will satisfy:\n",
     "\n",
     "\\begin{align}\n",
-    "\\Box\\, u &= \\hat{D}^{\\nu} \\hat{D}_{\\nu} u \\\\\n",
+    "0 = \\Box\\, u &= \\hat{D}^{\\nu} \\hat{D}_{\\nu} u \\\\\n",
     "&= \\hat{g}^{\\mu\\nu} \\hat{D}_{\\mu} \\hat{D}_{\\nu} u \\\\\n",
     "&= \\hat{g}^{\\mu\\nu} \\hat{D}_{\\mu} \\partial_{\\nu} u \\\\\n",
     "&= \\hat{g}^{\\mu\\nu} \\left[\\partial_{\\mu} (\\partial_{\\nu} u) - \\hat{\\Gamma}^\\alpha_{\\mu\\nu} (\\partial_{\\alpha} u) \\right],\n",
     "\\end{align}\n",
-    "here the hatted metric is defined as $\\hat{g}^{tt} = -1/v^2$ (where $v$ is the wavespeed), $\\hat{g}^{rr}=1$, $\\hat{g}^{\\theta\\theta}=1/r^2$, and $\\hat{g}^{\\phi\\phi}=1/(r^2\\sin^2\\theta)$ are the only nonzero metric terms for the spherical metric. However, the fact that $u=u(r,t)$ does not depend on the angular pieces greatly simplifies the expression:\n",
+    "here the hatted metric is defined as $\\hat{g}^{tt} = -1/v^2$ (where $v$ is the wavespeed), $\\hat{g}^{rr}=1$, $\\hat{g}^{\\theta\\theta}=1/r^2$, and $\\hat{g}^{\\phi\\phi}=1/(r^2\\sin^2\\theta)$ are the only nonzero metric terms for the spherical (contravariant) metric. However, the fact that $u=u(r,t)$ does not depend on the angular pieces greatly simplifies the expression:\n",
     "\n",
     "\\begin{align}\n",
     "\\Box\\, u\n",
@@ -1126,7 +1126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
