finite_difference*; Start_to_Finish 2BHs collide & ScalWaveCurvi: Add & validate new FD function infrastructure -- compute FD derivatives from function calls instead of big inlined expressions. Huge compile speedups esp for high order FD derivs.

--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -242,6 +242,9 @@
     "shutil.copy(os.path.join(\"SIMD/\")+\"SIMD_intrinsics.h\",os.path.join(Ccodesdir,\"SIMD/\"))\n",
     "\n",
     "# Step 10: Generate all needed C functions\n",
+    "FD_functions_enable = False\n",
+    "par.set_parval_from_str(\"finite_difference::FD_functions_enable\",FD_functions_enable)\n",
+    "\n",
     "desc=\"Part P3: Declare the function for the exact solution at a single point. time==0 corresponds to the initial data.\"\n",
     "name=\"exact_solution_single_point\"\n",
     "outCfunction(\n",
@@ -261,15 +264,22 @@
     "    loopopts = \"AllPoints\")\n",
     "\n",
     "desc=\"Part P5: Declare the function to evaluate the scalar wave RHSs\"\n",
+    "includes = None\n",
+    "if FD_functions_enable:\n",
+    "    includes = [\"finite_difference_functions.h\"]\n",
     "name=\"rhs_eval\"\n",
     "outCfunction(\n",
-    "    outfile  = os.path.join(Ccodesdir,name+\".h\"), desc=desc, name=name,\n",
+    "    outfile  = os.path.join(Ccodesdir,name+\".h\"), includes=includes, desc=desc, name=name,\n",
     "    params   =\"\"\"rfm_struct *restrict rfmstruct,const paramstruct *restrict params,\n",
     "                 const REAL *restrict in_gfs, REAL *restrict rhs_gfs\"\"\",\n",
     "    body     =fin.FD_outputC(\"returnstring\",[lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"uu\"),rhs=swrhs.uu_rhs),\n",
     "                                             lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"vv\"),rhs=swrhs.vv_rhs)],\n",
     "                             params=\"SIMD_enable=True\").replace(\"IDX4\",\"IDX4S\"),\n",
-    "    loopopts = \"InteriorPoints,EnableSIMD,Enable_rfm_precompute\")"
+    "    loopopts = \"InteriorPoints,EnableSIMD,Enable_rfm_precompute\")\n",
+    "\n",
+    "# Step 10.b Output functions for computing all finite-difference stencils\n",
+    "if FD_functions_enable:\n",
+    "    fin.output_finite_difference_functions_h(path=Ccodesdir)"
    ]
   },
   {
@@ -671,12 +681,12 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWaveCurvilinear_Playground_Ccodes/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground_Ccodes/output/ScalarWaveCurvilinear_Playground -lm`...\n",
-      "(BENCH): Finished executing in 0.8109462261199951 seconds.\n",
+      "(BENCH): Finished executing in 0.8106601238250732 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./ScalarWaveCurvilinear_Playground 16  8 16`...\n",
-      "(BENCH): Finished executing in 0.20896172523498535 seconds.\n",
+      "(BENCH): Finished executing in 2.0109000205993652 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./ScalarWaveCurvilinear_Playground 24 12 24`...\n",
-      "(BENCH): Finished executing in 0.607945442199707 seconds.\n"
+      "(BENCH): Finished executing in 4.616514205932617 seconds.\n"
      ]
     }
    ],
@@ -705,6 +715,13 @@
     "    # BENCHMARK 48x24x48 RUN, FD order = 4. desktop: 17.33s\n",
     "    # laptop: 51.82s on icc. 45.02s on GCC 9, 45.03s on GCC 7, 51.67s on clang\n",
     "    #     cmd.Execute(\"ScalarWaveCurvilinear_Playground\", \"48 24 48\", \"out-hghresolution.txt\")\n",
+    "\n",
+    "# %timeit cmd.Execute(\"ScalarWaveCurvilinear_Playground\", \"48 24 48\", \"out-hghresolution.txt\", verbose=False)\n",
+    "# FD functions disabled:\n",
+    "# 16 s ± 702 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+    "# FD functions enabled:\n",
+    "# 16.1 s ± 384 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+    "\n",
     "# Return to root directory\n",
     "os.chdir(os.path.join(\"../../\"))"
    ]
