Tutorial-BaikalETK: fix the return on BaikalETK_C_kernels_codegen_onepart(). It's correct in the Python module

--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -751,12 +751,13 @@
     "        outstr.append(pickle.dumps(lst.module))\n",
     "        outstr.append(pickle.dumps(lst.parname))\n",
     "        outstr.append(pickle.dumps(lst.defaultval))\n",
-    "    return outstr\n",
     "\n",
     "    outstr.append(pickle.dumps(len(outC_function_dict)))\n",
     "    for Cfuncname, Cfunc in outC_function_dict.items():\n",
     "        outstr.append(pickle.dumps(Cfuncname))\n",
-    "        outstr.append(pickle.dumps(Cfunc))"
+    "        outstr.append(pickle.dumps(Cfunc))\n",
+    "\n",
+    "    return outstr"
    ]
   },
   {
