--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -342,7 +342,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "(BENCH) Finished BSSN symbolic expressions in 3.580892562866211 seconds.\n"
+      "(BENCH) Finished BSSN symbolic expressions in 3.59956431388855 seconds.\n"
      ]
     }
    ],
@@ -570,20 +570,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.Generating C code for BSSN RHSs in Spherical coordinates.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating C code for Ricci tensor in Spherical coordinates.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating C code for Ricci tensor in Spherical coordinates.Generating C code for BSSN RHSs in Spherical coordinates.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "(BENCH) Finished gamma constraint C codegen in 0.07130789756774902 seconds.\n",
+      "(BENCH) Finished gamma constraint C codegen in 0.07637310028076172 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "(BENCH) Finished BSSN_RHS C codegen in 6.177995443344116 seconds.\n",
-      "(BENCH) Finished BL initial data codegen in 7.431026220321655 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen in 6.177722692489624 seconds.\n",
+      "(BENCH) Finished BL initial data codegen in 7.463637113571167 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "(BENCH) Finished Ricci C codegen in 12.949830293655396 seconds.\n",
+      "(BENCH) Finished Ricci C codegen in 12.816243886947632 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "(BENCH) Finished Hamiltonian C codegen in 26.101258039474487 seconds.\n"
+      "(BENCH) Finished Hamiltonian C codegen in 25.60417628288269 seconds.\n"
      ]
     }
    ],
@@ -596,35 +596,34 @@
     "#     the subprocesses in the following parallel codegen\n",
     "pickled_outC_func_dict = []\n",
     "\n",
-    "# Step 3.d.ii: Import the multiprocessing module.\n",
-    "import multiprocessing\n",
-    "\n",
-    "# Step 3.d.iii: Define master functions for parallelization.\n",
-    "#           Note that lambdifying this doesn't work in Python 3\n",
-    "def master_func(arg):\n",
-    "    return funcs[arg]()\n",
-    "def do_parallel_codegen(numprocs):\n",
-    "    # Step 3.d.iv: Evaluate list of functions in parallel if possible;\n",
-    "    #           otherwise fallback to serial evaluation:\n",
-    "    pool = multiprocessing.Pool(numprocs)\n",
-    "    pickled_outC_func_dict.append(pool.map(master_func,range(len(funcs))))\n",
-    "    pool.terminate()\n",
-    "    pool.join()\n",
-    "\n",
     "try:\n",
     "    if os.name == 'nt':\n",
     "        # It's a mess to get working in Windows, so we don't bother. :/\n",
     "        #  https://medium.com/@grvsinghal/speed-up-your-python-code-using-multiprocessing-on-windows-and-jupyter-or-ipython-2714b49d6fac\n",
     "        raise Exception(\"Parallel codegen currently not available in certain environments, e.g., Windows\")\n",
-    "    do_parallel_codegen(os.cpu_count())\n",
+    "\n",
+    "    # Step 3.d.ii: Import the multiprocessing module.\n",
+    "    import multiprocessing\n",
+    "\n",
+    "    # Step 3.d.iii: Define master functions for parallelization.\n",
+    "    #           Note that lambdifying this doesn't work in Python 3\n",
+    "    def master_func(arg):\n",
+    "        return funcs[arg]()\n",
+    "    # Step 3.d.iv: Evaluate list of functions in parallel if possible;\n",
+    "    #           otherwise fallback to serial evaluation:\n",
+    "    pool = multiprocessing.Pool()\n",
+    "    pickled_outC_func_dict.append(pool.map(master_func,range(len(funcs))))\n",
+    "    pool.terminate()\n",
+    "    pool.join()\n",
     "except:\n",
     "    # Steps 3.d.ii-iv, alternate: As fallback, evaluate functions in serial.\n",
     "    #       This will happen on Android and Windows systems\n",
-    "    pickled_outC_func_dict = [] # Reset in case multiprocessing wrote to it and failed.\n",
-    "    do_parallel_codegen(1)\n",
+    "    for func in funcs:\n",
+    "        func()\n",
+    "    pickled_outC_func_dict = [] # Reset, as pickling/unpickling unnecessary for serial codegen (see next line)\n",
     "\n",
     "# Step 3.d.v Output functions for computing all finite-difference stencils\n",
-    "if FD_functions_enable:\n",
+    "if FD_functions_enable and len(pickled_outC_func_dict)>0:\n",
     "    # First unpickle pickled_outC_func_dict\n",
     "    outCfunc_dict = {}\n",
     "    for WhichFunc in pickled_outC_func_dict[0]:\n",
@@ -1131,14 +1130,14 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BSSN_Two_BHs_Collide_Ccodes/output/BrillLindquist_Playground -lm`...\n",
-      "(BENCH): Finished executing in 7.020539999008179 seconds.\n",
+      "(BENCH): Finished executing in 7.0219221115112305 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
-      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 23028.60 | gp/s 3.24e+06\n",
-      "(BENCH): Finished executing in 1.2122292518615723 seconds.\n",
+      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 24284.13 | gp/s 3.42e+06\n",
+      "(BENCH): Finished executing in 1.2117595672607422 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
-      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 8132.16 | gp/s 3.62e+06\n",
-      "(BENCH): Finished executing in 3.4158644676208496 seconds.\n",
+      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 8388.86 | gp/s 3.73e+06\n",
+      "(BENCH): Finished executing in 3.414680004119873 seconds.\n",
       "(BENCH) Finished this code cell.\n"
      ]
     }
