Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb: Also make serial codegen work as backup.

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -636,7 +636,7 @@
     "    # Then store the unpickled outCfunc_dict to outputC's outC_function_dict\n",
     "    for key, item in outCfunc_dict.items():\n",
     "        outC_function_dict[key] = item\n",
-    "\n",
+    "if FD_functions_enable:\n",
     "    # Finally generate finite_difference_functions.h\n",
     "    fin.output_finite_difference_functions_h(path=Ccodesdir)"
    ]
@@ -1590,7 +1590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
