SEOBNR: update derivative routine to print all expressions to one file.  Clean up redundant lines of code.  Giving error when differentiating abs().

--- a/in_progress/Tutorial-SEOBNR_Derivative_Routine.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Derivative_Routine.ipynb
@@ -8,18 +8,23 @@
     "\n",
     "## Authors: Zach Etienne & Tyler Knowles\n",
     "\n",
-    "## This module contains a routine for computing an analytic partial derivative of a mathematical expression that is written as seveal subexpressions.\n",
+    "## This module contains a routine for computing partial derivatives of a mathematical expression that is written as several subexpressions.\n",
     "\n",
     "**Notebook Status:** <font color='red'><b> In progress </b></font>\n",
     "\n",
-    "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). Additionally, this notebook has been validated by checking that results are consistent with finite-difference derivative values in [LALSuite](https://git.ligo.org/lscsoft/lalsuite).\n",
+    "**TODO:**\n",
+    "1. Edit location of NRPy+ tutorial\n",
+    "1. Edit location of v3 Hamiltonian notebook (in introduction)\n",
+    "1. Include validation cell\n",
+    "\n",
+    "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). Additionally, this notebook has been validated by checking that results are consistent with exact derivative expressions in [LALSuite](https://git.ligo.org/lscsoft/lalsuite).\n",
     "\n",
     "### NRPy+ Source Code for this module: [SEOBNR_Derivative_Routine.py](../../edit/in_progress/SEOBNR/SEOBNR_Derivative_Routine.py)\n",
     "\n",
     "## Introduction\n",
     "$$\\label{intro}$$\n",
     "\n",
-    "This notebook documents the symbolic partial derivative routine used to generate analytic derivatives of the [SEOBNRv3](https://git.ligo.org/lscsoft/lalsuite) Hamiltonian (documented [here](../Tutorial-SEOBNR_Documentation.ipynb)) and described in [this article](https://arxiv.org/abs/1803.06346).  In general, this notebook takes as input a file of inter-dependent mathematical expressions (in SymPy syntax), a file of constant values within those expressions, and a file of all variables with which to take partial derivatives of each expression.  The output is a file of expressions for each partial derivative computation."
+    "This notebook documents the symbolic partial derivative routine used to generate analytic derivatives of the [SEOBNRv3](https://git.ligo.org/lscsoft/lalsuite) Hamiltonian (documented [here](../Tutorial-SEOBNR_v3_Hamiltonian.ipynb)) and described in [this article](https://arxiv.org/abs/1803.06346).  In general, this notebook takes as input a file of inter-dependent mathematical expressions (in SymPy syntax), a file listing the names of values within those expressions, and a file listing all variables with which to take partial derivatives of each expression.  The output is a text file containing the original expression and those for each partial derivative computation.  The intention is to perform CSE on these expressions to create efficient partial derivative code!"
    ]
   },
   {
@@ -35,7 +40,7 @@
     "\n",
     "1. [Step 1](#initializenrpy): Initialize core Python/NRPy+ modules\n",
     "1. [Step 2:](#step2) Read in expressions\n",
-    "1. [Step 3:](#step3) Read in constants\n",
+    "1. [Step 3:](#step3) Read in constants and variables\n",
     "1. [Step 4:](#step4) List free symbols\n",
     "1. [Step 5:](#step5) Convert expressions to function notation\n",
     "1. [Step 6:](#step6) Differentiate with respect to xx\n",
@@ -73,7 +78,8 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
-    "from outputC import *             # TylerK: check what is imported and remove *; also find appropriate description"
+    "from outputC import superfast_uniq, lhrh      # Remove duplicate entries from a Python array; store left- and right-\n",
+    "                                              #   hand sides of mathematical expressions"
    ]
   },
   {
@@ -95,28 +101,24 @@
    "outputs": [],
    "source": [
     "# Step 2.a: Read in expressions as a (single) string\n",
-    "#with open('SEOBNR/Hamstring_lite.txt', 'r') as file:\n",
-    "with open('SEOBNR/Hamstring.txt', 'r') as file:\n",
-    "    all_expressions = file.read()\n",
+    "with open('SEOBNR/Hamstring_lite.txt', 'r') as file:\n",
+    "    expressions_as_lines = file.readlines()\n",
     "\n",
-    "# Step 2.b: Split the expression string by carriage returns\n",
-    "string_lines = all_expressions.splitlines()\n",
-    "\n",
-    "# Step 2.c: Create and populate the \"lr\" array, which separates each line into left- and right-hand sides\n",
+    "# Step 2.b: Create and populate the \"lr\" array, which separates each line into left- and right-hand sides\n",
     "#   Each entry is a string of the form lhrh(lhs='',rhs='')\n",
     "lr = []\n",
     "\n",
-    "for i in range(len(string_lines)):\n",
+    "for i in range(len(expressions_as_lines)):\n",
     "    # Ignore lines with 2 or fewer characters and those starting with #\n",
-    "    if len(string_lines[i]) > 2 and string_lines[i][0] != \"#\":\n",
+    "    if len(expressions_as_lines[i]) > 2 and expressions_as_lines[i][0] != \"#\":\n",
     "        # Split each line by its equals sign\n",
-    "        split_line = string_lines[i].split(\"=\")\n",
+    "        split_line = expressions_as_lines[i].split(\"=\")\n",
     "        # Append the line to \"lr\", removing spaces, \"sp.\" prefixes, and replacing Lambda->Lamb\n",
     "        #   (Lambda is a protected keyword):\n",
     "        lr.append(lhrh(lhs=split_line[0].replace(\" \",\"\").replace(\"Lambda\",\"Lamb\"),\n",
     "                       rhs=split_line[1].replace(\" \",\"\").replace(\"sp.\",\"\").replace(\"Lambda\",\"Lamb\")))\n",
     "\n",
-    "# Step 2.d: Separate and simplify right- and left-hand sides into separate arrays\n",
+    "# Step 2.c: Separate and sympify right- and left-hand sides into separate arrays\n",
     "lhss = []\n",
     "rhss = []\n",
     "for i in range(len(lr)):\n",
@@ -130,7 +132,7 @@
    "source": [
     "<a id='step3'></a>\n",
     "\n",
-    "# Step 3: Read in constants \\[Back to [top](#toc)\\]\n",
+    "# Step 3: Read in constants and variables \\[Back to [top](#toc)\\]\n",
     "$$\\label{step3}$$\n",
     "\n",
     "We read in and declare as SymPy symbols the constant values; derivatives with respect to these variables will be set to zero.  We then read in the variables with respect to which we want to take derivatives and declare those as SymPy variables as well."
@@ -144,27 +146,21 @@
    "source": [
     "# Step 3.a: Read in constants as a (single) string\n",
     "with open('SEOBNR/Hamstring_constants.txt', 'r') as file:\n",
-    "    constants = file.read()\n",
+    "    constants_as_lines = file.readlines()\n",
     "\n",
-    "# Step 3.b: Split the input string by carriage returns\n",
-    "constants_as_strings = constants.splitlines()\n",
-    "\n",
-    "# Step 3.c: Create \"input_constants\" array and populate with SymPy constants\n",
+    "# Step 3.b: Create \"input_constants\" array and populate with SymPy constants\n",
     "input_constants = []\n",
-    "for constant in constants_as_strings:\n",
+    "for constant in constants_as_lines:\n",
     "    constant = sp.symbols(constant,real=True)\n",
     "    input_constants.append(constant)\n",
     "\n",
-    "# Step 3.d: Read in variables with which to take derivatives\n",
+    "# Step 3.c: Read in variables with which to take derivatives\n",
     "with open('SEOBNR/Hamstring_variables.txt', 'r') as file:\n",
-    "    variables = file.read()\n",
+    "    variables_as_lines = file.readlines()\n",
     "\n",
-    "# Step 3.e: Split the variable string by carriage returns\n",
-    "variables_as_strings = variables.splitlines()\n",
-    "\n",
-    "#Step 3.f: Create \"dynamic_variables\" array and populate with SymPy symbols\n",
+    "#Step 3.d: Create \"dynamic_variables\" array and populate with SymPy symbols\n",
     "dynamic_variables = []\n",
-    "for variable in variables_as_strings:\n",
+    "for variable in variables_as_lines:\n",
     "    variable = sp.symbols(variable,real=True)\n",
     "    dynamic_variables.append(variable)"
    ]
@@ -357,7 +353,6 @@
     "    for i in range(len(rhss_deriv_new)):\n",
     "        for var in variableprm_list:\n",
     "            if variableprm_list.index(str(var))==index:\n",
-    "            #if var==(variable+\"prm\"):\n",
     "                rhss_deriv_new[i] = rhss_deriv_new[i].subs(var,1)\n",
     "            else:\n",
     "                rhss_deriv_new[i] = rhss_deriv_new[i].subs(var,0)\n",
@@ -392,23 +387,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 9: Output each partial derivative computation in SymPy snytax to its own file\n",
-    "for var in dynamic_variables:\n",
-    "    with open(\"partial_wrt_\"+str(var)+\".txt\", \"w\") as output:\n",
-    "        outstring = \"# Original expression (terms may be needed for derivative computation)\\n\"\n",
-    "        output.write(\"%s\" % outstring)\n",
-    "        for i in range(len(lr)):\n",
-    "            right_side = lr[i].rhs\n",
-    "            right_side_in_sp = right_side.replace(\"sqrt(\",\"sp.sqrt(\").replace(\"log(\",\"sp.log(\").replace(\"pi\",\"sp.pi\").replace(\"sign(\",\"sp.sign(\").replace(\"Abs(\",\"sp.Abs(\").replace(\"Rational(\",\"sp.Rational(\")\n",
-    "            outstring = str(lr[i].lhs)+\" = \"+right_side_in_sp+\"\\n\"\n",
-    "            output.write(\"%s\" % outstring)\n",
-    "        outstring = \"\\n# Derivative expression\\n\"\n",
-    "        output.write(\"%s\" % outstring)\n",
+    "# Step 9: Output original expression and each partial derivative expression in SymPy snytax\n",
+    "with open(\"partial_derivatives.txt\", \"w\") as output:\n",
+    "    for i in range(len(lr)):\n",
+    "        right_side = lr[i].rhs\n",
+    "        right_side_in_sp = right_side.replace(\"sqrt(\",\"sp.sqrt(\").replace(\"log(\",\"sp.log(\").replace(\"pi\",\n",
+    "                                                \"sp.pi\").replace(\"sign(\",\"sp.sign(\").replace(\"Abs(\",\n",
+    "                                                \"sp.Abs(\").replace(\"Rational(\",\"sp.Rational(\")\n",
+    "        output.write(str(lr[i].lhs)+\" = \"+right_side_in_sp)\n",
+    "    for var in dynamic_variables:\n",
     "        for i in range(len(lhss_derivative[var])):\n",
     "            right_side = str(rhss_derivative[var][i])\n",
-    "            right_side_in_sp = right_side.replace(\"sqrt(\",\"sp.sqrt(\").replace(\"log(\",\"sp.log(\").replace(\"pi\",\"sp.pi\").replace(\"sign(\",\"sp.sign(\").replace(\"Abs(\",\"sp.Abs(\").replace(\"Rational(\",\"sp.Rational(\")\n",
-    "            outstring = str(lhss_derivative[var][i])+\" = \"+right_side_in_sp+\"\\n\"\n",
-    "            output.write(\"%s\" % outstring)"
+    "            right_side_in_sp = right_side.replace(\"sqrt(\",\"sp.sqrt(\").replace(\"log(\",\"sp.log(\").replace(\"pi\",\n",
+    "                                                \"sp.pi\").replace(\"sign(\",\"sp.sign(\").replace(\"Abs(\",\n",
+    "                                                \"sp.Abs(\").replace(\"Rational(\",\"sp.Rational(\").replace(\"prm\",\n",
+    "                                                \"prm_\"+str(var))\n",
+    "            output.write(str(lhss_derivative[var][i]).replace(\"prm\",\"prm_\"+str(var))+\" = \"+right_side_in_sp+\"\\n\")"
    ]
   },
   {
