--- a/in_progress/Tutorial-GiRaFFE_NRPy-Introduction.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Introduction.ipynb
@@ -27,11 +27,12 @@
     "\n",
     "Single compact objects, especially the magnetospheres of black holes and neutron stars, are also sources of interest. These systems are not yet well understood. By simulating such systems, we can find equilibrium solutions to their magnetospheres and generate predictions that can be compared to observation, yielding deeper insights into these systems. See [here](https://arxiv.org/abs/1112.2622) and [here](https://arxiv.org/pdf/1310.3274.pdf). Komissarov was the first to study black hole magnetospheres numerically (see [here](https://arxiv.org/abs/astro-ph/0402403) and [here](https://arxiv.org/pdf/astro-ph/0501599.pdf)), as well as the magnetospheres of [neutron stars](https://arxiv.org/abs/astro-ph/0510310). Reasonable magnetic field configurations for single compact objects can also be used as starting points to generate compact binary initial data.\n",
     "\n",
-    "In [Paper I](https://arxiv.org/pdf/1704.00599.pdf), we introduced the first open-source GRFFE code for dynamical spacetimes, implementing the formalism of [Paschalidis 2013](https://arxiv.org/pdf/1310.3274.pdf) as an Einstein Toolkit (ETK) thorn. We expand on that work here using the NRPy+ infrastructure instead of the ETK. NRPy+ offers several advantages; perhaps foremost among these is the capability for open-source code generation. In many cases, we are able to write the equations of GRFFE in Einstein notation in Python notebooks, and from these, generate highly optimized C code. This code generation does not require expensive software licences and is well-documented in Jupyter notebooks, which enable the code to be seen right next to the equations typeset using $\\latex$. Because much of the code is generated on the fly, NRPy+ is largely agnostic to the underlying infrastructure and much of what we do here could be ported to other infrastructures. However, for this paper, we write the code as a standalone C program. (There's also a secret advantage that will help us later!)\n",
+    "In [Paper I](https://arxiv.org/pdf/1704.00599.pdf), we introduced the first open-source GRFFE code for dynamical spacetimes, implementing the formalism of [Paschalidis 2013](https://arxiv.org/pdf/1310.3274.pdf) as an Einstein Toolkit (ETK) thorn. We expand on that work here using the NRPy+ infrastructure instead of the ETK. NRPy+ offers several advantages; perhaps foremost among these is the capability for open-source code generation. In many cases, we are able to write the equations of GRFFE in Einstein notation in Python notebooks, and from these, generate highly optimized C code. This code generation does not require expensive software licences and is well-documented in Jupyter notebooks, which enable the code to be seen right next to the equations typeset using $\\LaTeX$. Because much of the code is generated on the fly, NRPy+ is largely agnostic to the underlying infrastructure and much of what we do here could be ported to other infrastructures. However, for this paper, we write the code as a standalone C program. (There's also a secret advantage that will help us later!)\n",
     "\n",
     "We continue to use the A-field formulation that was used in [Paper I], which is also used in [IllinoisGRMHD](https://arxiv.org/pdf/1501.07276.pdf), and is laid out in detail [here](https://arxiv.org/pdf/1310.3274.pdf). This helps improve stability by guaranteeing the no magnetic monopoles appear without divergence cleaning or other such algorithms. \n",
     "\n",
-    "We also provide options for both staggered and unstaggered formulations of the code. The staggered version is more robust for complicated shock fronts [see here](https://arxiv.org/pdf/1009.2468.pdf) **\"Balsara\" doesn't appear in this paper**, while the unstaggered version can still be implemented in an infrastructure that does not support staggered gridfunctions.\n",
+    "We also provide options for both staggered and unstaggered formulations of the code. The staggered version is more robust for complicated shock fronts [see here](https://arxiv.org/pdf/1009.2468.pdf) **\"Balsara\" doesn't appear in this paper** **Zach says: look at the references: \"Most of the details on the mathematical and numerical\n",
+    "setup... are discussed in depth in [6, 18–20].\"**, while the unstaggered version can still be implemented in an infrastructure that does not support staggered gridfunctions.\n",
     "\n",
     "**vv Old vv**\n",
     "\n",
@@ -74,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
