--- a/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
+++ b/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
@@ -14,18 +14,34 @@
     "1. [Introduction](Tutorial-GiRaFFE_NRPy-Introduction.ipynb)\n",
     "    1. [Basic Equations](Tutorial-GiRaFFE_NRPy-Basic_Equations.ipynb)\n",
     "    1. [Numerical Methods](Tutorial-GiRaFFE_NRPy-Numerical_Methods.ipynb)\n",
-    "1. Initial Data:\n",
-    "    1. **Implementation**\n",
+    "1. **GiRaFFEfood: Initial Data:**\n",
+    "    1. *Implementation*\n",
     "        1. <font color='green'><b> Patrick Seal of Approval</b></font>[Exact Wald](Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb)\n",
-    "            * This initial data represents a spinning black hole in a uniform magnetic field aligned with the black hole's spin axis. \n",
+    "            1. These initial data represents a spinning black hole in a uniform magnetic field aligned with the black hole's spin axis. \n",
     "        1. <font color='green'><b> Patrick Seal of Approval</b></font>[Aligned Rotator](Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb)\n",
-    "            * This flat-space test represents a toy model of a black hole magnetosphere. \n",
+    "            1. This flat-space test represents a toy model of a black hole magnetosphere. \n",
     "        1. <font color='green'><b> Patrick Seal of Approval</b></font>: [1-D test: Alfv&eacute;n Wave](Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb)\n",
-    "            * This test demonstrates the propagation of a specific MHD wave. \n",
+    "            1. This test demonstrates the propagation of a specific MHD wave. \n",
     "        1. <font color='green'><b> Patrick Seal of Approval</b></font>[1-D test: Fast Wave](Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb)\n",
-    "            * This test demonstrates the propagation of another MHD wave.\n",
+    "            1. This test demonstrates the propagation of another MHD wave.\n",
     "        1. More initial data to come!\n",
-    "    1. [**Validation of all initial data choices against original `GiRaFFEfood`, demonstrating agreement to round-off error.**](Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb) <font color='green'><b> Patrick Seal of Approval</b></font>\n",
+    "    1. *Validation*\n",
+    "        1. [Validation of all initial data choices against original `GiRaFFEfood`, demonstrating agreement to round-off error.](Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb) <font color='green'><b> Patrick Seal of Approval</b></font>\n",
+    "1. **GiRaFFE: Solve the GRFFE equations to evolve the initial data forward in time**\n",
+    "    1. *Generate main C code driver* for \n",
+    "        1. [Unstaggered A fields](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb)\n",
+    "        1. [Staggered A fields](....)\n",
+    "    1. The above driver routine pulls together a number of subroutines, called in this order:\n",
+    "        1. Calculate the gauge terms for $A_k$, $-\\partial_i (\\alpha \\Phi - \\beta^j A_j)$, and $\\Phi$, $-\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]$:\n",
+    "            1. *Implementation*; See also: [Tutorial for GRHD](../Tutorial-GRHD_Equations-Cartesian.ipynb)\n",
+    "                1. [Unstaggered prescription](../Tutorial-GRFFE_Equations-Cartesian.ipynb)\n",
+    "                1. Staggered prescription: **TODO: create notebook for C code.**\n",
+    "            1. *Validation*\n",
+    "                1. [Unstaggered prescription](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
+    "        1. [Interpolate metric on cell faces:](Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
+    "            1. Basic interpolation of the metric gridfunctions at cell centers to cell faces given a specific direction. \n",
+    "            1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
+    "\n",
     "1. Main Drivers\n",
     "    * These modules will generate all the functions from the next two sections with one call and provide wrapper functions so that all the reconstructions and function calls can be done in the proper order, while avoiding cluttering up the main notebook. They come in two flavors:\n",
     "        * [Unstaggered](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb): This implementation uses only cell-centered grids. This makes it easier to avoid coordinate singularities in curvilinear coordinate systems, but is less stable shocks whose speed approaches the speed of light. \n",
@@ -96,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
